# mango-lassi

./: .gitignore  Makefile  Makefile.am  README  bootstrap.sh  configure.ac  gnome-input-share.glade  lassi-avahi.c  lassi-avahi.h  lassi-clipboard.c  lassi-grab.c  lassi-grab.h  lassi-osd.c  lassi-osd.h  lassi-prefs.c  lassi-prefs.h  lassi-server.c  lassi-server.h  lassi-tray.c  lassi-tray.h  lassi-xtest.c  lassi-xtest.h  mango-lassi.glade  x  xinput.c
data/: Makefile.inc  mango-lassi.1  mango-lassi.desktop.in.in
doc/: Makefile.am  mango-lassi.omf.in
doc/C/: legal.xml  mango-lassi.xml
icons/: Makefile.inc
po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  fr.po  pl.po  pt_BR.po
src/: lassi-avahi.c  lassi-avahi.h  lassi-clipboard.c  lassi-clipboard.h  lassi-grab.c  lassi-grab.h  lassi-help.c  lassi-help.h  lassi-order.c  lassi-order.h  lassi-osd.c  lassi-prefs.c  lassi-prefs.h  lassi-server.c  lassi-server.h  lassi-tray.c  lassi-tray.h  mango-lassi.glade  mango-lassi.ui
